--- a/src/sections/media-content-grid.liquid
+++ b/src/sections/media-content-grid.liquid
@@ -144,7 +144,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_lg",
+        "id": "bg_image_md_up",
         "label": "Background Image - Medium & Up Devices"
       },
       {
@@ -163,7 +163,7 @@
       },
       {
         "type": "range",
-        "id": "header_container_col_lg",
+        "id": "header_container_col_md_up",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -185,7 +185,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_lg",
+        "id": "header_container_justify_container_md_up",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -209,7 +209,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_align_lg",
+        "id": "header_container_text_align_md_up",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
@@ -230,7 +230,7 @@
       },
       {
         "type": "image_picker",
-        "id": "image_lg",
+        "id": "image_md_up",
         "label": "Image - Medium & Up devices"
       },
       {
@@ -391,7 +391,7 @@
           },
           {
             "type": "range",
-            "id": "block_container_col_lg",
+            "id": "block_container_col_md_up",
             "min": 1,
             "max": 12,
             "step": 1,
@@ -444,7 +444,7 @@
           },
           {
             "type": "range",
-            "id": "block_container_col_lg",
+            "id": "block_container_col_md_up",
             "min": 1,
             "max": 12,
             "step": 1,
@@ -483,7 +483,7 @@
           },
           {
             "type": "range",
-            "id": "block_container_col_lg",
+            "id": "block_container_col_md_up",
             "min": 1,
             "max": 12,
             "step": 1,
@@ -528,7 +528,7 @@
           },
           {
             "type": "range",
-            "id": "block_container_col_lg",
+            "id": "block_container_col_md_up",
             "min": 1,
             "max": 12,
             "step": 1,
