--- a/src/sections/media-promo.liquid
+++ b/src/sections/media-promo.liquid
@@ -41,7 +41,7 @@
       },
       {
         "type": "select",
-        "id": "content_order_lg",
+        "id": "content_order_md_up",
         "label": "Content position",
         "info": "Large devices only. On small devices, image stacks first and is followed by the content.",
         "options": [
@@ -52,7 +52,7 @@
       },
       {
         "type": "select",
-        "id": "justify_content_lg",
+        "id": "justify_content_md_up",
         "label": "Vertical alignment of section content - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Top"},
@@ -162,7 +162,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_lg",
+        "id": "bg_image_md_up",
         "label": "Background Image - Medium & Up Devices"
       },
       {
@@ -181,7 +181,7 @@
       },
       {
         "type": "range",
-        "id": "header_container_col_lg",
+        "id": "header_container_col_md_up",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -203,7 +203,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_lg",
+        "id": "header_container_justify_container_md_up",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -227,7 +227,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_align_lg",
+        "id": "header_container_text_align_md_up",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
@@ -248,7 +248,7 @@
       },
       {
         "type": "image_picker",
-        "id": "image_lg",
+        "id": "image_md_up",
         "label": "Image - Medium & Up devices"
       },
       {
@@ -382,7 +382,7 @@
           },
           {
             "type": "image_picker",
-            "id": "image_lg",
+            "id": "image_md_up",
             "label": "Image - Medium & Up devices"
           },
           {
