--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -47,7 +47,7 @@
             <div class="col-12 mb-3">
               {% render 'image-object',
                 image_url: image_src,
-                image_url_lg: image_src,
+                image_url_md_up: image_src,
                 image_alt_text: image_alt_text,
                 aspect_ratio: '1by1' %}
             </div>
