--- a/src/snippets/article-card.liquid
+++ b/src/snippets/article-card.liquid
@@ -19,7 +19,7 @@
           {% assign image_alt_text = article.image.alt %}
           {% render 'image-object'
             image_url: image,
-            image_url_lg: image,
+            image_url_md_up: image,
             image_alt_text: image_alt_text,
             image_aspect_ratio: '1by1' %}
         </a>
