--- a/src/snippets/content-footer.liquid
+++ b/src/snippets/content-footer.liquid
@@ -36,7 +36,7 @@
       link_size: link_size,
       link_block: link_block,
       content_align: content_align,
-      content_align_lg: content_align_lg %}
+      content_align_md_up: content_align_md_up %}
   {% endcapture %}
 
   {% render 'content-wrapper'
@@ -59,8 +59,8 @@
     {% render 'grid-item'
       col: col,
       col_offset: col_offset,
-      col_lg: col_lg,
-      col_lg_offset: col_offset_lg,
+      col_md_up: col_md_up,
+      col_md_up_offset: col_offset_md_up,
       content: content %}
   {% endcapture %}
 {% endif %}
