--- a/src/snippets/link-element.liquid
+++ b/src/snippets/link-element.liquid
@@ -7,7 +7,8 @@
   Usage:
 
   {% render 'link-element',
-    text_align: { string } - optional
+    link_align: { string } - optional
+    link_align_md_up: { string } - optional
     link_style: { string } - optional
     link_url: { string } - optional
     link_size: { string } - optional
@@ -16,14 +17,29 @@
 {% endcomment %}
 
 {% comment %} Element Settings {% endcomment %}
-{% if text_align != blank %}
-  {% assign text_align = text_align %}
+
+{% if link_align != blank %}
+  {% assign link_align = settings.ec_prefix
+    | append: 'text-'
+    | append: link_align %}
 {% else %}
-  {% assign text_align = 'text-left' %}
+  {% assign link_align =  settings.ec_prefix | append: 'text-left' %}
 {% endif %}
 
+{% if link_align_md_up != blank %}
+  {% assign link_align_md_up = settings.ec_prefix
+    | append: 'text-md-'
+    | append: link_align_md_up %}
+{% else %}
+  {% assign link_align_md_up = settings.ec_prefix | append: 'text-md-center' %}
+{% endif %}
+
+{% assign link_align_classes = link_align
+  | append: ' '
+  | append: link_align_md_up %}
+
 {% comment %} Element Wrapper Classes {% endcomment %}
-{% assign el_wrapper_classes = text_align %}
+{% assign el_wrapper_classes = link_align_classes %}
 
 {% comment %} Link Classes {% endcomment %}
 {% assign link_classes = blank %}
@@ -35,12 +51,17 @@
       | append: link_style %}
   {% else %}
     {% assign link_classes = link_classes
-      | append: 'btn '
+      | append: settings.ec_prefix
+      | append: 'btn'
+      | append: ' '
+      | append: settings.ec_prefix
+      | append: 'btn-'
       | append: link_style %}
   {% endif %}
 {% else %}
   {% assign link_classes = link_classes
     | append: ' '
+    | append: settings.ec_prefix
     | append: 'btn-primary' %}
 {% endif %}
 {% if link_class != blank %}
@@ -52,19 +73,28 @@
 {% if link_size != blank %}
   {% assign link_classes = link_classes
     | append: ' '
+    | append: settings.ec_prefix
+    | append: 'btn-'
     | append: link_size %}
 {% endif %}
 
 {% if link_block == true %}
   {% assign link_classes = link_classes
-    | append: ' btn-block' %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'btn-block' %}
 {% endif %}
+
+{% assign link_classes = link_classes
+  | append: ' '
+  | append: settings.ec_prefix
+  | append: 'mb-2' %}
 
 {% comment %} Link Element {% endcomment %}
 {% capture link_element %}
   {% if link_url != blank and link_text != blank %}
     <a href="{{ link_url }}"
-      class="{{ link_classes }} mb-2">{{ link_text }}</a>
+      class="{{ link_classes }}">{{ link_text }}</a>
   {% endif %}
 {% endcapture %}
 
