--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -31,7 +31,7 @@
     <a href="{{ product_url | within: collection }}">
       {% render 'image-object',
                   image_url: product_featured_image,
-                  image_url_lg: product_featured_image,
+                  image_url_md_up: product_featured_image,
                   image_alt_text: product_title,
                   aspect_ratio: '1by1' %}
     </a>
