--- a/src/snippets/section.liquid
+++ b/src/snippets/section.liquid
@@ -15,7 +15,7 @@
   {% render 'bg-image-tag'
     id: section_id,
     bg_image_url: bg_image_url,
-    bg_image_url_lg: bg_image_url_lg,
+    bg_image_url_md_up: bg_image_url_md_up,
     bg_color: bg_color,
     bg_color_alpha: bg_color_alpha %}
 {% endcapture %}
@@ -23,55 +23,75 @@
 {% comment %} Section Classes {% endcomment %}
 {% if pt != 0 %}
   {% assign section_classes = section_classes
-    | append: ' pt-'
+    | append: settings.ec_prefix
+    | append: 'pt-'
     | append: pt %}
 {% endif %}
 
 {% if pb != 0 %}
   {% assign section_classes = section_classes
-  | append: ' pb-'
-  | append: pb %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'pb-'
+    | append: pb %}
 {% endif %}
 
 {% if pt_md_up != 0 %}
   {% assign section_classes = section_classes
-  | append: ' pt-md-'
-  | append: pt_md_up %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'pt-md-'
+    | append: pt_md_up %}
 {% endif %}
 
 {% if pb_md_up != 0 %}
   {% assign section_classes = section_classes
-  | append: ' pb-md-'
+  | append: ' '
+  | append: settings.ec_prefix
+  | append: 'pb-md-'
   | append: pb_md_up %}
 {% endif %}
 
 {% if mt != 0 %}
   {% assign section_classes = section_classes
-  | append: ' mt-'
-  | append: mt %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'mt-'
+    | append: mt %}
 {% endif %}
 
 {% if mb != 0 %}
   {% assign section_classes = section_classes
-  | append: ' mb-'
-  | append: mb %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'mb-'
+    | append: mb %}
 {% endif %}
 
 {% if mt_md_up != 0 %}
   {% assign section_classes = section_classes
-  | append: ' mt-md-'
-  | append: mt_md_up %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'mt-md-'
+    | append: mt_md_up %}
 {% endif %}
 
 {% if mb_md_up != 0 %}
   {% assign section_classes = section_classes
-  | append: ' mb-md-'
-  | append: mb_md_up %}
+    | append: ' '
+    | append: settings.ec_prefix
+    | append: 'mb-md-'
+    | append: mb_md_up %}
 {% endif %}
 
 {% if section_id != blank %}
   {% assign section_classes = section_classes
-  | append: ' bg-image-'
+  | append: ' '
+  | append: settings.ec_prefix
+  | append: 'bg-content-wrapper'
+  | append: ' '
+  | append: settings.ec_prefix
+  | append: 'bg-image-'
   | append: section_id %}
 {% endif %}
 
