--- a/src/snippets/single-variant-product-images.liquid
+++ b/src/snippets/single-variant-product-images.liquid
@@ -24,7 +24,7 @@
                     {% render 'image-object',
                       id: variant_image.id,
                       image_url: variant_image_src,
-                      image_url_lg: variant_image_src,
+                      image_url_md_up: variant_image_src,
                       image_alt_text: variant_image.alt,
                       aspect_ratio: '1by1'
                     %}
