--- a/src/sections/blog-article-faq-list.liquid
+++ b/src/sections/blog-article-faq-list.liquid
@@ -138,7 +138,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_lg",
+        "id": "bg_image_md_up",
         "label": "Background Image - Medium & Up Devices"
       },
       {
@@ -157,7 +157,7 @@
       },
        {
         "type": "range",
-        "id": "header_container_col_lg",
+        "id": "header_container_col_md_up",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -179,7 +179,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_lg",
+        "id": "header_container_justify_container_md_up",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -203,7 +203,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_align_lg",
+        "id": "header_container_text_align_md_up",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
