--- a/src/sections/product-text-content.liquid
+++ b/src/sections/product-text-content.liquid
@@ -173,7 +173,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_lg",
+        "id": "bg_image_md_up",
         "label": "Background Image - Medium & Up Devices"
       },
       {
@@ -192,7 +192,7 @@
       },
       {
         "type": "range",
-        "id": "header_container_col_lg",
+        "id": "header_container_col_md_up",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -214,7 +214,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_lg",
+        "id": "header_container_justify_container_md_up",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -238,7 +238,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_align_lg",
+        "id": "header_container_text_align_md_up",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
