--- a/src/snippets/eyebrow-element.liquid
+++ b/src/snippets/eyebrow-element.liquid
@@ -16,22 +16,32 @@
 
 {% comment %} Snippet Settings {% endcomment %}
 {% if text_align != blank %}
-  {% assign text_align =  text_align %}
+  {% assign text_align = settings.ec_prefix | append: 'text-' | append: text_align %}
 {% else %}
-  {% assign text_align = 'text-left' %}
+  {% assign text_align =  settings.ec_prefix | append: 'text-left' %}
 {% endif %}
+
+{% if text_align_md_up != blank %}
+  {% assign text_align_md_up = settings.ec_prefix | append: 'text-md-' | append: text_align_md_up %}
+{% else %}
+  {% assign text_align_md_up = settings.ec_prefix | append: 'text-md-center' %}
+{% endif %}
+
+{% assign text_align_classes = text_align
+  | append: ' '
+  | append: text_align_md_up %}
 
 {% if eyebrow_style != blank %}
-  {% assign eyebrow_style = 'badge-' | append: eyebrow_style %}
+  {% assign eyebrow_style = settings.ec_prefix | append: 'badge-' | append: eyebrow_style %}
 {% else %}
-  {% assign eyebrow_style = 'badge-secondary' %}
+  {% assign eyebrow_style = settings.ec_prefix | append: 'badge-secondary' %}
 {% endif %}
 
-{% assign classes = 'mb-1' %}
-{% assign classes = classes | append: ' ' | append: text_align %}
+{% assign classes = settings.ec_prefix | append: 'mb-1' %}
+{% assign classes = classes | append: ' ' | append: text_align_classes %}
 
 {% comment %} Badge Element Classes {% endcomment %}
-{% assign badge_classes = 'badge'%}
+{% assign badge_classes = settings.ec_prefix | append: 'badge'%}
 {% assign badge_classes = badge_classes
   | append: ' '
   | append: eyebrow_style %}
