--- a/src/snippets/section-image-content.liquid
+++ b/src/snippets/section-image-content.liquid
@@ -13,19 +13,19 @@
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg
+{% assign bg_image_url_md_up = section.settings.bg_image_md_up
   | img_url: '1000x' %}
-{% if bg_image_url_lg contains 'no-image' %}
-  {% assign bg_image_url_lg = blank %}
+{% if bg_image_url_md_up contains 'no-image' %}
+  {% assign bg_image_url_md_up = blank %}
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
 {% assign header_container_col = section.settings.header_container_col %}
-{% assign header_container_col_lg = section.settings.header_container_col_lg  %}
+{% assign header_container_col_md_up = section.settings.header_container_col_md_up  %}
 {% assign header_container_justify_container = section.settings.header_container_justify_container %}
-{% assign header_container_justify_container_lg = section.settings.header_container_justify_container_lg %}
+{% assign header_container_justify_container_md_up = section.settings.header_container_justify_container_md_up %}
 {% assign header_container_text_align = section.settings.header_container_text_align %}
-{% assign header_container_text_align_lg = section.settings.header_container_text_align_lg %}
+{% assign header_container_text_align_md_up = section.settings.header_container_text_align_md_up %}
 
 {% comment %} Image Container Settings {% endcomment %}
 {% assign image_aspect_ratio = section.settings.image_aspect_ratio %}
@@ -35,7 +35,7 @@
 {% assign image_aspect_ratio_classes = image_aspect_ratio %}
 
 {% comment %} Content Container Settings {% endcomment %}
-{% assign content_order_lg = section.settings.content_order_lg %}
+{% assign content_order_md_up = section.settings.content_order_md_up %}
 {% assign eyebrow_style = section.settings.eyebrow_style %}
 {% assign heading_style = section.settings.heading_style %}
 {% assign content_color = section.settings.content_color %}
@@ -44,7 +44,7 @@
 {% assign content_container_wrapper_classes = 'col-12 col-md-6' %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes
   | append: ' '
-  | append: content_order_lg %}
+  | append: content_order_md_up %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes
   | append: ' '
   | append: 'd-flex align-items-start flex-column justify-content-center' %}
@@ -118,20 +118,20 @@
         background-size: cover;
       }
     </style>
-  {% elsif bg_image_url_lg != blank %}
+  {% elsif bg_image_url_md_up != blank %}
     <style>
       [data-section-id="{{ section.id }}"] {
-        background-image: url({{ bg_image_url_lg }});
+        background-image: url({{ bg_image_url_md_up }});
         background-size: cover;
       }
     </style>
   {% endif %}
 
-  {% if bg_image_url_lg != blank %}
+  {% if bg_image_url_md_up != blank %}
     <style>
       @media (min-width: 992px) {
         [data-section-id="{{ section.id }}"] {
-          background-image: url({{ bg_image_url_lg }});
+          background-image: url({{ bg_image_url_md_up }});
           background-size: cover;
         }
       }
@@ -152,7 +152,7 @@
       <div class="{{ image_classes }}">
         {% render 'image-object'
           image_url: image_url,
-          image_url_lg: image_url_lg,
+          image_url_md_up: image_url_md_up,
           image_alt_text: image_alt_text,
           image_aspect_ratio: image_aspect_ratio_classes %}
       </div>
@@ -166,11 +166,11 @@
             heading_style: heading_style,
             paragraph_text: paragraph_text,
             col: header_container_col,
-            col_lg: header_container_col_lg,
+            col_md_up: header_container_col_md_up,
             justify_container: header_container_justify_container,
-            justify_container_lg: header_container_justify_container_lg,
+            justify_container_md_up: header_container_justify_container_md_up,
             text_align: header_container_text_align,
-            text_align_lg: header_container_text_align_lg %}
+            text_align_md_up: header_container_text_align_md_up %}
         </div>
       </div>
     </div>
