--- a/src/snippets/section-media-mosaic.liquid
+++ b/src/snippets/section-media-mosaic.liquid
@@ -19,19 +19,19 @@
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg
+{% assign bg_image_url_md_up = section.settings.bg_image_md_up
   | img_url: '1000x' %}
-{% if bg_image_url_lg contains 'no-image' %}
-  {% assign bg_image_url_lg = blank %}
+{% if bg_image_url_md_up contains 'no-image' %}
+  {% assign bg_image_url_md_up = blank %}
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
 {% assign header_container_col = section.settings.header_container_col %}
-{% assign header_container_col_lg = section.settings.header_container_col_lg  %}
+{% assign header_container_col_md_up = section.settings.header_container_col_md_up  %}
 {% assign header_container_justify_container = section.settings.header_container_justify_container %}
-{% assign header_container_justify_container_lg = section.settings.header_container_justify_container_lg %}
+{% assign header_container_justify_container_md_up = section.settings.header_container_justify_container_md_up %}
 {% assign header_container_text_align = section.settings.header_container_text_align %}
-{% assign header_container_text_align_lg = section.settings.header_container_text_align_lg %}
+{% assign header_container_text_align_md_up = section.settings.header_container_text_align_md_up %}
 
 
 {% comment %} Section Content Settings {% endcomment %}
@@ -136,20 +136,20 @@
         background-size: cover;
       }
     </style>
-  {% elsif bg_image_url_lg != blank %}
+  {% elsif bg_image_url_md_up != blank %}
     <style>
       [data-section-id="{{ section.id }}"] {
-        background-image: url({{ bg_image_url_lg }});
+        background-image: url({{ bg_image_url_md_up }});
         background-size: cover;
       }
     </style>
   {% endif %}
 
-  {% if bg_image_url_lg != blank %}
+  {% if bg_image_url_md_up != blank %}
     <style>
       @media (min-width: 992px) {
         [data-section-id="{{ section.id }}"] {
-          background-image: url({{ bg_image_url_lg }});
+          background-image: url({{ bg_image_url_md_up }});
           background-size: cover;
         }
       }
@@ -175,11 +175,11 @@
           heading_style: heading_style,
           paragraph_text: paragraph_text,
           col: header_container_col,
-          col_lg: header_container_col_lg,
+          col_md_up: header_container_col_md_up,
           justify_container: header_container_justify_container,
-          justify_container_lg: header_container_justify_container_lg,
+          justify_container_md_up: header_container_justify_container_md_up,
           text_align: header_container_text_align,
-          text_align_lg: header_container_text_align_lg %}
+          text_align_md_up: header_container_text_align_md_up %}
       </div>
     </div>
     <div class="row">
@@ -191,7 +191,7 @@
             {% assign featured_image_alt = block.settings.image.alt %}
             {% render 'image-object',
               image_url: featured_image_src,
-              image_url_lg: featured_image_src,
+              image_url_md_up: featured_image_src,
               image_alt_text: featured_image_alt,
               image_aspect_ratio: '1by1'
             %}
