--- a/src/snippets/section-media-promo.liquid
+++ b/src/snippets/section-media-promo.liquid
@@ -8,25 +8,25 @@
 
 {% comment %} Global Section Settings {% endcomment %}
 {% assign bg_color = section.settings.bg_color %}
-{% assign justify_content_lg = section.settings.justify_content_lg %}
+{% assign justify_content_md_up = section.settings.justify_content_md_up %}
 {% assign bg_image_url = section.settings.bg_image
   | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg
+{% assign bg_image_url_md_up = section.settings.bg_image_md_up
   | img_url: '1000x' %}
-{% if bg_image_url_lg contains 'no-image' %}
-  {% assign bg_image_url_lg = blank %}
+{% if bg_image_url_md_up contains 'no-image' %}
+  {% assign bg_image_url_md_up = blank %}
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
 {% assign header_container_col = section.settings.header_container_col %}
-{% assign header_container_col_lg = section.settings.header_container_col_lg  %}
+{% assign header_container_col_md_up = section.settings.header_container_col_md_up  %}
 {% assign header_container_justify_container = section.settings.header_container_justify_container %}
-{% assign header_container_justify_container_lg = section.settings.header_container_justify_container_lg %}
+{% assign header_container_justify_container_md_up = section.settings.header_container_justify_container_md_up %}
 {% assign header_container_text_align = section.settings.header_container_text_align %}
-{% assign header_container_text_align_lg = section.settings.header_container_text_align_lg %}
+{% assign header_container_text_align_md_up = section.settings.header_container_text_align_md_up %}
 
 {% comment %} Media Container Settings {% endcomment %}
 {% for block in section.blocks limit:1 %}
@@ -41,17 +41,17 @@
     {% elsif block.type == 'image' %}
       {% assign image_url = block.settings.image.src
         | img_url: '600x' %}
-      {% assign image_url_lg = block.settings.image_lg.src
+      {% assign image_url_md_up = block.settings.image_md_up.src
         | img_url: '800x' %}
       {% assign image_aspect_ratio = block.settings.image_aspect_ratio %}
-      {% if block.settings.image_lg.alt != blank%}
-        {% assign image_alt_text = block.settings.image_lg.alt %}
+      {% if block.settings.image_md_up.alt != blank%}
+        {% assign image_alt_text = block.settings.image_md_up.alt %}
       {% elsif block.settings.image.alt != blank %}
         {% assign image_alt_text = block.settings.image.alt %}
       {% endif %}
       {% render 'image-object',
         image_url: image_url,
-        image_url_lg: image_url_lg,
+        image_url_md_up: image_url_md_up,
         image_alt_text: image_alt_text
         image_aspect_ratio: image_aspect_ratio
       %}
@@ -63,7 +63,7 @@
 {% assign media_classes = 'col-12 col-md-7 mb-3 mb-md-0 d-flex align-items-start flex-column' %}
 {% assign media_classes = media_classes
   | append: ' '
-  | append: justify_content_lg %}
+  | append: justify_content_md_up %}
 
 {% comment %} Image Content Container Settings {% endcomment %}
 {% assign image_aspect_ratio = section.settings.image_aspect_ratio %}
@@ -73,16 +73,16 @@
 {% if image_url contains 'no-image' %}
   {% assign image_url = blank %}
 {% endif %}
-{% assign image_url_lg = section.settings.image_lg | img_url: '1000x' %}
-{% if image_url_lg contains 'no-image' %}
-  {% assign image_url_lg = blank %}
+{% assign image_url_md_up = section.settings.image_md_up | img_url: '1000x' %}
+{% if image_url_md_up contains 'no-image' %}
+  {% assign image_url_md_up = blank %}
 {% endif %}
 
 {% comment %} Image Class Container Settings {% endcomment %}
 {% assign image_classes = 'mb-4' %}
 
 {% comment %} Content Container Settings {% endcomment %}
-{% assign content_order_lg = section.settings.content_order_lg %}
+{% assign content_order_md_up = section.settings.content_order_md_up %}
 {% assign eyebrow_style = section.settings.eyebrow_style %}
 {% assign eyebrow_text = section.settings.eyebrow_text %}
 {% assign heading_style = section.settings.heading_style %}
@@ -97,13 +97,13 @@
 {% assign content_container_wrapper_classes = 'col-12 col-md-5' %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes
   | append: ' '
-  | append: content_order_lg %}
+  | append: content_order_md_up %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes
   | append: ' '
   | append: 'd-flex align-items-start flex-column' %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes
   | append: ' '
-  | append: justify_content_lg %}
+  | append: justify_content_md_up %}
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'pr-5 my-3' %}
@@ -165,7 +165,7 @@
 {% comment %} Render HTML Content? {% endcomment %}
 {% if image_url != blank %}
   {% assign show_rendered_content = true %}
-{% elsif image_url_lg != blank %}
+{% elsif image_url_md_up != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
   {% assign show_rendered_content = true %}
@@ -197,20 +197,20 @@
           background-size: cover;
         }
       </style>
-    {% elsif bg_image_url_lg != blank %}
+    {% elsif bg_image_url_md_up != blank %}
       <style>
         [data-section-id="{{ section.id }}"] {
-          background-image: url({{ bg_image_url_lg }});
+          background-image: url({{ bg_image_url_md_up }});
           background-size: cover;
         }
       </style>
     {% endif %}
 
-    {% if bg_image_url_lg != blank %}
+    {% if bg_image_url_md_up != blank %}
       <style>
         @media (min-width: 992px) {
           [data-section-id="{{ section.id }}"] {
-            background-image: url({{ bg_image_url_lg }});
+            background-image: url({{ bg_image_url_md_up }});
             background-size: cover;
           }
         }
@@ -232,10 +232,10 @@
           {{ rendered_media }}
         </div>
         <div class="{{ content_container_wrapper_classes }}">
-          {% if image_url != blank or image_url_lg != blank %}
+          {% if image_url != blank or image_url_md_up != blank %}
             {% render 'image-object'
               image_url: image_url,
-              image_url_lg: image_url_lg,
+              image_url_md_up: image_url_md_up,
               image_alt_text: image_alt_text,
               image_aspect_ratio: image_aspect_ratio_classes %}
           {% endif %}
@@ -248,11 +248,11 @@
               heading_style: heading_style,
               paragraph_text: paragraph_text,
               col: header_container_col,
-              col_lg: header_container_col_lg,
+              col_md_up: header_container_col_md_up,
               justify_container: header_container_justify_container,
-              justify_container_lg: header_container_justify_container_lg,
+              justify_container_md_up: header_container_justify_container_md_up,
               text_align: header_container_text_align,
-              text_align_lg: header_container_text_align_lg %}
+              text_align_md_up: header_container_text_align_md_up %}
           </div>
         </div>
       </div>
